[package]
name = "rdatatables"
version = "0.0.1"
authors = ["luisvonmuller <luis@vonmuller.com.br>"]
description = "A small implementation of datatables API (ssp) on rust-lang. (incomplete)."
repository = "https://github.com/luisvonmuller/rdatatables/"
edition = "2018"

[dependencies]
rocket = "0.4.5"
diesel = { version = "1.4.5",  features = ["postgres", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

