[package]
name = "rdatatables"
version = "0.0.1"
authors = ["luisvonmuller <luis@vonmuller.com.br>"]
description = "A small implementation of datatables back-end API (ssp) on rust-lang. (incomplete)."
repository = "https://github.com/luisvonmuller/rdatatables/"
license = "GPL-2.0+ WITH Bison-exception-2.0"
keywords = ["rocket", "diesel", "table", "datatablas", "rustdatatables", "rdt"]
edition = "2018"

[dependencies]
rocket = "0.4.5"
diesel = { version = "1.4.5",  features = ["postgres", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

