[package]
name = "rdatatables"
version = "0.0.3"
authors = ["luisvonmuller <luis@vonmuller.com.br>"]
description = "A small implementation of datatables back-end API (ssp) on rust-lang. (incomplete)."
repository = "https://github.com/luisvonmuller/rdatatables/"
license = "MIT OR Apache-2.0"
keywords = ["unstable", "diesel",  "datatables", "rustdatatables", "rdt"]
edition = "2018"

[dependencies]
diesel = { version = "1.4.5",  features = ["postgres", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

